init weather module
